--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "hotel-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.3.1",
+    "dotenv": "^16.3.1"
   }
 }
